objects/wkitsm__CaseAction__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__ActionItem__c</fullName>
        <formula>wkitsm__Action__r.Name</formula>
        <label>Action Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ActionOperation__c</fullName>
        <formula>wkitsm__Action__r.wkitsm__Operation__c</formula>
        <label>Action Operation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ActionTarget__c</fullName>
        <label>Action Target</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ActionType__c</fullName>
        <description>The type of action that the Case action represents.</description>
        <inlineHelpText>Tanium Actions are basic actions created using the Tanium platform. Software Deployments refer to deployments managed by Tanium Deploy.</inlineHelpText>
        <label>Action Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RestartEndpoint</fullName>
                    <label>Restart Endpoint</label>
                </value>
                <value>
                    <fullName>ProcessTermination</fullName>
                    <default>true</default>
                    <label>Process Termination</label>
                </value>
                <value>
                    <fullName>ServiceControl</fullName>
                    <label>Service Control</label>
                </value>
                <value>
                    <fullName>SoftwareDeployment</fullName>
                    <label>Software Deployment</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkitsm__Action__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Action</label>
        <referenceTo>wkitsm__Action__c</referenceTo>
        <relationshipLabel>Action</relationshipLabel>
        <relationshipName>Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CaseActions</relationshipLabel>
        <relationshipName>CaseActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Completed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Downloading__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Downloading</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Expired__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__FailedVerification__c</fullName>
        <defaultValue>0</defaultValue>
        <label>FailedVerification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Failed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__PendingVerification__c</fullName>
        <defaultValue>0</defaultValue>
        <label>PendingVerification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Running__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Running</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Verified__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Verified</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__WaitingToRetry__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WaitingToRetry</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkitsm__Waiting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Waiting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CaseAction</label>
    <listViews>
        <fullName>wkitsm__All</fullName>
        <columns>NAME</columns>
        <columns>wkitsm__CaseId__c</columns>
        <columns>wkitsm__ActionType__c</columns>
        <columns>wkitsm__ActionOperation__c</columns>
        <columns>wkitsm__ActionItem__c</columns>
        <columns>wkitsm__ActionTarget__c</columns>
        <columns>wkitsm__Completed__c</columns>
        <columns>wkitsm__Downloading__c</columns>
        <columns>wkitsm__Failed__c</columns>
        <columns>wkitsm__IsActive__c</columns>
        <columns>wkitsm__Running__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Action Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>